// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Andel
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,173.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                10 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,139.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                20 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                30 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,69.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                40 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,35.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                50 %
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                60 %
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="0"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="34.66666666666666"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="173.33333333333334"
              opacity="0.2"
              width="405"
              x="0"
              y="34.66666666666666"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,30.041L270,156L135,85.557L0,165.013"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="30.041093333333322"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="156"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="85.55733333333333"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="165.01333333333332"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render with levels reversed @500px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem test"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
          <g
            class="legendItem test2"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              test2
            </text>
            <line
              stroke="#90CAF9"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,178.78571428571428)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,149.07142857142856)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,119.35714285714285)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,89.64285714285712)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,59.92857142857142)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,30.2142857142857)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,6
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,7
              </text>
            </g>
          </g>
          <g
            class="levels"
          >
            <rect
              class="level"
              data-testid="level-high"
              fill="#3baa34"
              height="59.428571428571445"
              opacity="0.2"
              width="405"
              x="0"
              y="148.57142857142856"
            />
            <rect
              class="level"
              data-testid="level-mid"
              fill="#fd9c00"
              height="59.42857142857143"
              opacity="0.2"
              width="405"
              x="0"
              y="89.14285714285712"
            />
            <rect
              class="level"
              data-testid="level-low"
              fill="#e30713"
              height="89.14285714285712"
              opacity="0.2"
              width="405"
              x="0"
              y="0"
            />
          </g>
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M270,163.429L135,103.049L0,171.154"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M270,59.429L135,49.92L0,136.686"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          >
            <path
              class="line"
              d="M405,55.464L270,163.429"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
            <path
              class="line"
              d="M405,168.352L270,59.429"
              fill="none"
              opacity="1"
              stroke="#90CAF9"
              style="stroke-width: 3; stroke-dasharray: 10, 10; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="55.463794285714286"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="163.42857142857142"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="103.04914285714284"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="171.15428571428572"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="405"
              cy="168.35222857142855"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="59.42857142857142"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="49.91999999999997"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="136.68571428571428"
              fill="#90CAF9"
              opacity="1"
              r="4"
              stroke="#90CAF9"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div>
    <div
      style="width: 90%; margin: auto; position: relative;"
    >
      <svg
        class="lineChart"
        height="322"
        style="background-color: white;"
        width="500"
      >
        <g
          transform="translate(25, 8)"
        >
          <g
            class="legendItem a"
            opacity="1"
            transform="translate(0,0)"
          >
            <text
              dy="0.35em"
              fill="#2D3034"
              font-size="0.9rem"
              text-anchor="start"
              x="0"
              y="0"
            >
               
              a
            </text>
            <line
              stroke="#4F9A94"
              stroke-linecap="round"
              stroke-width="4"
              x1="0"
              x2="15"
              y1="15"
              y2="15"
            />
          </g>
        </g>
        <g
          transform="translate(25, 38)"
        >
          <g
            class="x-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="middle"
            transform="translate(0, 208)"
          >
            <g
              class="tick"
              opacity="1"
              transform="translate(405.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2020
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(270.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2019
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(135.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2018
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0.5,0)"
            >
              <text
                dy="0.71em"
                fill="#828586"
                style="font-size: 16.075px;"
                y="21.64"
              >
                2017
              </text>
            </g>
          </g>
          <g
            class="y-axis"
            fill="none"
            font-family="sans-serif"
            font-size="10"
            text-anchor="start"
          >
            <text
              fill="#2D3034"
              style="font-size: 15.1px;"
              transform="rotate(-90)"
              x="-138.66666666666666"
              y="465.74999999999994"
            >
              Antall
            </text>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,208.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,173.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,1
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,139.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,2
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,104.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,3
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,69.83333333333331)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,4
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,35.16666666666666)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,5
              </text>
            </g>
            <g
              class="tick"
              opacity="1"
              transform="translate(0,0.5)"
            >
              <line
                stroke="#D2D3D4"
                x2="405"
              />
              <text
                dy="0.32em"
                fill="#828586"
                style="font-size: 12.16px;"
                x="408"
              >
                0,6
              </text>
            </g>
          </g>
          <g
            class="levels"
          />
          <g
            class="linesComplete"
          >
            <path
              class="line"
              d="M405,34.667L270,156L135,104L0,173.333"
              fill="none"
              opacity="1"
              stroke="#4F9A94"
              style="stroke-width: 3; stroke-linejoin: round; stroke-linecap: round; mix-blend-mode: multiply;"
            />
          </g>
          <g
            class="linesIncomplete"
          />
          <g
            class="dots"
          >
            <circle
              class="dot"
              cx="405"
              cy="34.66666666666666"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="270"
              cy="156"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="135"
              cy="104"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
            <circle
              class="dot"
              cx="0"
              cy="173.33333333333331"
              fill="#4F9A94"
              opacity="1"
              r="4"
              stroke="#4F9A94"
              style="mix-blend-mode: multiply;"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
